# clippying

./: .gitignore  README.md
clippying-rs/: Cargo.toml  Makefile  README.md  build.rs
clippying-rs/src/: daemon.rs  main.rs
clippying-rs/ui/: trimmer.slint
clippying-sc-plugin/: README.md  actions.py  build.sh  main.py  manifest.json  pyproject.toml
clippying-sc-plugin/clippying_native/: __init__.py
clippying-sc-plugin/locales/: en_US.json
clippying-sc-plugin/rust-host/: Cargo.toml  build.rs
clippying-sc-plugin/rust-host/src/: lib.rs
