[package]
name = "clippying"
version = "0.2.0"
edition = "2021"

[build-dependencies]
slint-build = "1.9"

[dependencies]
slint = { version = "1.9", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
hound = "3.5"          # WAV reading/writing
dirs = "5"             # Cross-platform directories
nix = { version = "0.29", features = ["process"] }
bytemuck = "1.14"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
# PulseAudio client bindings (pipewire-pulse will route this to PipeWire)
pulse = { version = "2.0", package = "libpulse-binding" }
psimple = { version = "2.0", package = "libpulse-simple-binding" }

[profile.release]
# opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary
strip = true           # Strip symbols

# [profile.release.package."*"]
# opt-level = "z"        # Also optimize dependencies for size
