[package]
name = "clippying_native"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[lib]
name = "clippying_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3", "abi3-py311"] }
url = "2.5"
once_cell = "1.21"
clippying = { path = "../../clippying-rs" }
